comment delete limit

--- a/app/views/comments/_item.html.erb
+++ b/app/views/comments/_item.html.erb
@@ -1,7 +1,10 @@
 <li id="comment-<%=comment.id%>">  
-	    <%= comment.content %>
+	<label>익명</label><label><%=comment.created_at %></label>
+	<%= comment.content %>
+	<%if comment.user_id == current_user.id %>
 	    <%= link_to "삭제", comment_path(comment),
 		                method: :delete,
 				remote: true,
 				data: {confirm: "정말로 삭제하시겠습니까?"} %>
+	<%end%>
 </li>
